# MicroSense

./: .bumpversion.toml  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose-dev.yaml  docker-compose.yaml  pyproject.toml
microsense/: database.py  main.py  otlp_tracer.py
